added procfile and node 16 in pkg.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node ./dist/src/index.js",
     "build": "tsc"
   },
+  "engines": {
+    "node": "16.6.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
