Aded mimi bot into the list

--- a/configs.json
+++ b/configs.json
@@ -1,5 +1,6 @@
 {
   "bots": [
-    "Aoi . ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo 849641637831376936"
+    "Aoi . ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo 849641637831376936",
+    "Mimi + ODQ5Mzc0NDY5NzI2MDExNDM0.YLaPng.qSlha7G1jk0j883lSDALXXpER2M 849641637831376936"
   ]
 }
