--- a/configs.json
+++ b/configs.json
@@ -1,5 +1,6 @@
 {
   "bots": [
-    "Aoi . ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo 849641637831376936"
+    "Aoi . ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo 849641637831376936",
+    "Aoi2 + ODg5NTQwMzU1NTg0ODI3NDQy.YUivAw.VqBqzek9YFDSUv_3DOrwQsJ9vVE 849641637831376936"
   ]
 }
