--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "chalk": "^4.1.2",
     "discord-button-pages": "^1.1.9",
     "discord.js": "^13.1.0",
-    "distube": "^3.0.0-beta.36",
+    "distube": "^3.0.0-beta.39",
     "ffmpeg-static": "^4.4.0",
     "genius-lyrics": "^4.2.9",
     "libsodium-wrappers": "^0.7.9",
     "mal-scraper": "^2.11.3",
     "mongoose": "^6.0.1",
     "node-fetch": "^2.6.1",
+    "node-kitsu": "^1.1.1",
     "pm2": "^5.1.1",
     "string-progressbar": "^1.0.4"
   },
