--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@discordjs/opus": "^0.5.3",
     "@discordjs/voice": "^0.5.6",
     "@distube/soundcloud": "^0.2.2",
+    "@types/ms": "^0.7.31",
     "@distube/spotify": "^0.6.3",
     "chalk": "^4.1.2",
     "discord-button-pages": "^1.1.9",
@@ -28,11 +29,13 @@
     "libsodium-wrappers": "^0.7.9",
     "mal-scraper": "^2.11.3",
     "mongoose": "^6.0.1",
+    "ms": "^2.1.3",
     "mongoose-tsgen": "^8.3.9",
     "node-fetch": "^2.6.1",
     "node-kitsu": "^1.1.1",
     "pm2": "^5.1.1",
-    "string-progressbar": "^1.0.4"
+    "string-progressbar": "^1.0.4",
+    "discord-giveaways": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^16.4.10",
