--- a/src/Bot/commands/CommandExample.ts.example
+++ b/src/Bot/commands/CommandExample.ts.example
@@ -16,5 +16,7 @@ export default class Command extends BaseCommand {
     });
   }
 
-  async run(client: DiscordClient, message: Message, args: Array<string>) {}
+  async run(client: DiscordClient, message: Message, args: Array<string>) {
+    const config = await getConfig(client,message.guild?.id as string);
+  }
 }
