--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
 		"node-fetch": "^2.6.1",
 		"node-kitsu": "^1.1.1",
 		"pm2": "^5.1.1",
-		"string-progressbar": "^1.0.4"
+		"string-progressbar": "^1.0.4",
+		"ytdl-core": "^4.9.1"
 	},
 	"devDependencies": {
 		"@types/gifencoder": "^2.0.1",
