--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"dev": "nodemon ./src/Bot/app.ts",
 		"devjs": "nodemon ./dist/src/Bot/app.js",
-		"start": "node ./dist/src/index.js",
+		"start": "npm run pm2 && npm run monit",
+		"monit": "pm2 monit",
 		"build": "tsc",
 		"pm2": "pm2 start ./dist/src/index.js",
 		"lint": "eslint src",
