--- a/src/Bot/config.json
+++ b/src/Bot/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "OTAwMDU4MTg5MjQ3MTcyNjQ4.YW7ygg.3BnvE9bj3U2qzsVSSMUA8YYRqBE",
+	"token": "ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo",
 	"mainPrefix": ".",
 	"mongodb": "mongodb+srv://admin:4Z12t2TYyBQGdPmT@hentai.klm1z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
 	"mainOwner": "849641637831376936"
