added rsmb command

--- a/package.json
+++ b/package.json
@@ -1,79 +1,97 @@
 {
-	"name": "main-bot",
-	"version": "61.7.4",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"dev": "nodemon ./src/Bot/app.ts",
-		"devjs": "nodemon ./dist/src/Bot/app.js",
-		"start": "pm2-runtime ./dist/src/Bot/app.js",
-		"build": "tsc",
-		"pm2": "pm2 start ./dist/src/index.js",
-		"lint": "eslint src",
-		"prettier": "prettier --write src/**/*.ts",
-		"lint:fix": "eslint src --fix",
-		"copy-canvacord-images": "copyfiles --error --up 1 src/Bot/utils/Modules/@azecord/assets/data/images/*.* dist/src",
-		"copy-canvacord-fonts": "copyfiles --error --up 1 src/Bot/utils/Modules/@azecord/assets/data/fonts/*.* dist/src",
-		"copy-aze-canvas-fonts": "copyfiles --error --up 1 src/Bot/utils/Modules/AzeCord/aze-canvas/assets/fonts/*.* dist/src",
-		"copy-aze-canvas-images": "copyfiles --error --up 1 src/Bot/utils/Modules/AzeCord/aze-canvas/assets/img/*.* dist/src",
-		"postbuild": "npm run copy-canvacord-images && npm run copy-canvacord-fonts && npm run copy-aze-canvas-images && npm run copy-aze-canvas-fonts"
-	},
-	"engines": {
-		"node": "16.9.1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@discordjs/opus": "^0.5.3",
-		"@discordjs/rest": "^0.1.0-canary.0",
-		"@discordjs/voice": "^0.5.6",
-		"@distube/soundcloud": "^0.2.2",
-		"@distube/spotify": "^0.6.3",
-		"@types/ms": "^0.7.31",
-		"@vitalets/google-translate-api": "^7.0.0",
-		"aki-api": "^6.0.8",
-		"canvas": "^2.8.0",
-		"chalk": "^4.1.2",
-		"discord-api-types": "^0.24.0",
-		"discord-button-pages": "^1.1.9",
-		"discord-canvas": "^1.4.1",
-		"discord-giveaways": "^4.5.1",
-		"discord-ytdl-core": "^5.0.4",
-		"discord.js": "^13.2.0",
-		"distube": "^3.0.0-beta.39",
-		"eslint": "^8.0.1",
-		"express": "^4.17.1",
-		"ffmpeg-static": "^4.4.0",
-		"fortnite-9812": "^1.0.4",
-		"genius-lyrics": "^4.2.9",
-		"genshin-db": "^3.11.2",
-		"gifencoder": "^2.0.1",
-		"libsodium-wrappers": "^0.7.9",
-		"mal-scraper": "^2.11.3",
-		"mathjs": "^9.5.1",
-		"moment": "^2.29.1",
-		"moment-duration-format": "^2.3.2",
-		"mongoose": "^6.0.1",
-		"mongoose-tsgen": "^8.3.9",
-		"ms": "^2.1.3",
-		"node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
-		"node-fetch": "^2.6.1",
-		"node-kitsu": "^1.1.1",
-		"node-url-shortener": "^2.0.0",
-		"pm2": "^5.1.1",
-		"string-progressbar": "^1.0.4",
-		"ts-node": "^10.4.0",
-		"ytdl-core": "^4.9.1"
-	},
-	"devDependencies": {
-		"@types/express": "^4.17.13",
-		"@types/gifencoder": "^2.0.1",
-		"@types/moment-duration-format": "^2.2.3",
-		"@types/node": "^16.4.10",
-		"@types/node-fetch": "^2.5.12",
-		"copyfiles": "^2.4.1",
-		"nodemon": "^2.0.12",
-		"typescript": "^4.3.5"
-	}
+  "name": "main-bot",
+  "version": "61.7.4",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon ./src/Bot/app.ts",
+    "devjs": "nodemon ./dist/src/Bot/app.js",
+    "start": "pm2-runtime ./dist/src/Bot/app.js",
+    "build": "tsc",
+    "pm2": "pm2 start ./dist/src/index.js",
+    "lint": "eslint src",
+    "prettier": "prettier --write src/**/*.ts",
+    "lint:fix": "eslint src --fix",
+    "copy-canvacord-images": "copyfiles --error --up 1 src/Bot/utils/Modules/@azecord/assets/data/images/*.* dist/src",
+    "copy-canvacord-fonts": "copyfiles --error --up 1 src/Bot/utils/Modules/@azecord/assets/data/fonts/*.* dist/src",
+    "copy-aze-canvas-fonts": "copyfiles --error --up 1 src/Bot/utils/Modules/AzeCord/aze-canvas/assets/fonts/*.* dist/src",
+    "copy-aze-canvas-images": "copyfiles --error --up 1 src/Bot/utils/Modules/AzeCord/aze-canvas/assets/img/*.* dist/src",
+    "postbuild": "npm run copy-canvacord-images && npm run copy-canvacord-fonts && npm run copy-aze-canvas-images && npm run copy-aze-canvas-fonts"
+  },
+  "engines": {
+    "node": "16.13.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@discordjs/opus": "^0.5.3",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/voice": "^0.5.6",
+    "@distube/soundcloud": "^0.2.2",
+    "@distube/spotify": "^0.6.3",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/ms": "^0.7.31",
+    "@vitalets/google-translate-api": "^7.0.0",
+    "aki-api": "^6.0.8",
+    "axios": "^0.24.0",
+    "canvas": "^2.8.0",
+    "chalk": "^4.1.2",
+    "discord-api-types": "^0.24.0",
+    "discord-button-pages": "^1.1.9",
+    "discord-canvas": "^1.4.1",
+    "discord-giveaways": "^4.5.1",
+    "discord-ytdl-core": "^5.0.4",
+    "discord.js": "^13.2.0",
+    "distube": "^3.0.0-beta.39",
+    "eslint": "^8.0.1",
+    "express": "^4.17.1",
+    "ffmpeg-static": "^4.4.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "fortnite-9812": "^1.0.4",
+    "genius-lyrics": "^4.2.9",
+    "genshin-db": "^3.11.2",
+    "gifencoder": "^2.0.1",
+    "libsodium-wrappers": "^0.7.9",
+    "mal-scraper": "^2.11.3",
+    "mathjs": "^9.5.1",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
+    "mongoose": "^6.0.1",
+    "mongoose-tsgen": "^8.3.9",
+    "ms": "^2.1.3",
+    "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
+    "node-fetch": "^2.6.1",
+    "node-kitsu": "^1.1.1",
+    "node-url-shortener": "^2.0.0",
+    "passport": "^0.5.0",
+    "passport-discord": "^0.1.4",
+    "pm2": "^5.1.1",
+    "request": "^2.88.2",
+    "string-progressbar": "^1.0.4",
+    "tiny-typed-emitter": "^2.1.0",
+    "ts-node": "^10.4.0",
+    "usetube": "^2.1.4",
+    "wetransfert": "^2.3.4",
+    "youtube-notification": "^1.1.0",
+    "youtube-notification-module": "^1.1.0",
+    "ytdl-core": "^4.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/fluent-ffmpeg": "^2.1.19",
+    "@types/gifencoder": "^2.0.1",
+    "@types/moment-duration-format": "^2.2.3",
+    "@types/node": "^16.4.10",
+    "@types/node-fetch": "^2.5.12",
+    "@types/node-localstorage": "^1.3.0",
+    "@types/passport": "^1.0.7",
+    "@types/passport-discord": "^0.1.5",
+    "@types/request": "^2.48.7",
+    "@types/usetube": "^2.1.0",
+    "@types/xml2js": "^0.4.9",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^2.0.12",
+    "typescript": "^4.3.5"
+  }
 }
