some updates, almost done with api

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/Bot/app.ts",
-    "devjs": "nodemon ./dist/src/Bot/app.js",
-    "startjs": "node ./dist/src/Bot/app.js",
-    "start": "pm2-runtime ./dist/src/Bot/app.js",
+    "dev": "nodemon ./src/index.ts",
+    "devjs": "nodemon ./dist/src/index.js",
+    "startjs": "node ./dist/src/index.js",
+    "start": "pm2-runtime ./dist/src/index.js",
     "build": "tsc",
     "test": "npm run build && npm run startjs",
     "pm2": "pm2 start ./dist/src/index.js",
@@ -50,6 +50,7 @@
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.2.0",
     "distube": "^3.0.0-beta.39",
+    "dotenv": "^10.0.0",
     "eslint": "^8.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
