--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ COOKIE_SECRET_KEY=!@$@!BestPas$WorDTomak3MyA99S3cure-12@!#!
 
 #ENCRYPTING AND DECRYPTING SECRETS
 ENCRYPTION_KEY=!@$@!BestPas$WorDTomak3MyA99S3cure-12@!#!
+
+#API DASHBOARD SETTINGS
+DASHBOARD_MAIN_URL=http://localhost:3000
