--- a/src/server/client/config.json
+++ b/src/server/client/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "OTAwMDU4MTg5MjQ3MTcyNjQ4.YW7ygg.3BnvE9bj3U2qzsVSSMUA8YYRqBE",
-  "mainPrefix": ".",
-  "mongodb": "mongodb+srv://admin:4Z12t2TYyBQGdPmT@hentai.klm1z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
-  "mainOwner": "849641637831376936"
+	"token": "ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo",
+	"mainPrefix": ".",
+	"mongodb": "mongodb+srv://admin:4Z12t2TYyBQGdPmT@hentai.klm1z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+	"mainOwner": "849641637831376936"
 }
