--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@types/ms": "^0.7.31",
     "@vitalets/google-translate-api": "^7.0.0",
     "aki-api": "^6.0.8",
+    "canvacord": "^5.2.3",
     "canvas": "^2.8.0",
+    "captcha-canvas": "^3.1.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "discord-canvas": "^1.4.1",
     "discord-giveaways": "^5.0.1",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.3.1",
@@ -54,6 +57,7 @@
     "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
     "node-kitsu": "^1.1.1",
     "node-url-shortener": "^2.0.0",
+    "node-vibrant": "^3.2.1-alpha.1",
     "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -72,6 +76,7 @@
     "@types/express-session": "^1.17.4",
     "@types/fluent-ffmpeg": "^2.1.20",
     "@types/gifencoder": "^2.0.1",
+    "@types/glur": "^1.1.1",
     "@types/js-cookie": "^3.0.1",
     "@types/moment-duration-format": "^2.2.3",
     "@types/node": "16.11.6",
