--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
     "@distube/soundcloud": "^1.0.0",
     "@distube/spotify": "^1.0.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.1",
     "@types/ms": "^0.7.31",
     "@vitalets/google-translate-api": "^7.0.0",
     "aki-api": "^6.0.8",
@@ -38,6 +42,7 @@
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.3.1",
     "distube": "^3.0.3",
+    "djs-invite-tracker": "^1.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -64,6 +69,7 @@
     "react-dom": "17.0.2",
     "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
+    "sharp": "^0.29.3",
     "smart-botto": "^1.1.1",
     "string-progressbar": "^1.0.4",
     "wetransfert": "^2.3.4",
