--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:next": "next build",
     "build": "npm run build:next && npm run build:server",
     "start": "NODE_ENV=production node dist/server/app.js",
-    "dev": "NODE_ENV=production nodemon src/server/app.ts",
+    "dev": "ts-node --project tsconfig.server.json  src/server/app.ts",
     "copy-canvacord-images": "copyfiles --error --up 2 src/server/client/utils/Modules/@azecord/assets/data/images/*.* dist/server",
     "copy-canvacord-fonts": "copyfiles --error --up 2 src/server/client/utils/Modules/@azecord/assets/data/fonts/*.* dist/server",
     "copy-aze-canvas-fonts": "copyfiles --error --up 2 src/server/client/utils/Modules/AzeCord/aze-canvas/assets/fonts/*.* dist/server",
@@ -31,6 +31,7 @@
     "@types/ms": "^0.7.31",
     "@vitalets/google-translate-api": "^7.0.0",
     "aki-api": "^6.0.8",
+    "bootstrap": "^5.1.3",
     "canvacord": "^5.2.3",
     "canvas": "^2.8.0",
     "captcha-canvas": "^3.1.0",
@@ -60,6 +61,7 @@
     "mongoose": "^6.0.13",
     "ms": "^2.1.3",
     "next": "12.0.1",
+    "next-seo": "^4.28.1",
     "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
     "node-kitsu": "^1.1.1",
     "node-url-shortener": "^2.0.0",
@@ -67,6 +69,7 @@
     "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reactstrap": "^9.0.1",
     "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
     "sharp": "^0.29.3",
