--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,9 +1,9 @@
 {
-	"extends": "./tsconfig.json",
-	"compilerOptions": {
-		"module": "CommonJS",
-		"outDir": "dist",
-		"noEmit": false
-	},
-	"include": ["src/server"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "outDir": "dist",
+    "noEmit": false
+  },
+  "include": ["src/server"]
 }
