--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "dist",
-    "noEmit": false
+    "noEmit": false,
+    "target": "ES2021"
   },
   "include": ["src/server"]
 }
