--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ms": "^2.1.3",
     "next": "12.0.1",
     "next-seo": "^4.28.1",
+    "nextjs-progressbar": "^0.0.13",
     "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
     "node-kitsu": "^1.1.1",
     "node-url-shortener": "^2.0.0",
@@ -76,6 +77,7 @@
     "sharp": "^0.29.3",
     "smart-botto": "^1.1.1",
     "string-progressbar": "^1.0.4",
+    "styled-components": "^5.3.3",
     "wetransfert": "^2.3.4",
     "ytdl-core": "^4.9.1"
   },
@@ -94,6 +96,7 @@
     "@types/react": "17.0.33",
     "@types/request": "^2.48.7",
     "@types/serve-favicon": "^2.5.3",
+    "@types/styled-components": "^5.1.15",
     "copyfiles": "^2.4.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.1",
