--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.13.0"
-  },
   "scripts": {
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
-    "build": "npm run build:next && npm run build:server",
-    "start": "NODE_ENV=production node dist/server/app.js",
+    "buildss": "npm run build:next && npm run build:server",
+    "build": "npm run build:server",
+    "start": "node dist/server/app.js",
     "dev": "ts-node --project tsconfig.server.json  src/server/app.ts",
     "copy-canvacord-images": "copyfiles --error --up 2 src/server/client/utils/Modules/@azecord/assets/data/images/*.* dist/server",
     "copy-canvacord-fonts": "copyfiles --error --up 2 src/server/client/utils/Modules/@azecord/assets/data/fonts/*.* dist/server",
@@ -67,6 +65,7 @@
     "nextjs-progressbar": "^0.0.13",
     "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
     "node-kitsu": "^1.1.1",
+    "node-opus": "^0.3.3",
     "node-url-shortener": "^2.0.0",
     "node-vibrant": "^3.2.1-alpha.1",
     "nodemon": "^2.0.15",
