--- a/src/server/client/config.json
+++ b/src/server/client/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "ODg5MTA4MDc0Nzc2OTAzNzEw.YUccaw.hmHCLqogczK6sfXVY6simTBJNWo",
+	"token": "ODg5MTA4MDc0Nzc2OTAzNzEw.Gy837-.0ytsrvXRvnzUtp2dEsNIJQ8bYnU4u2wMTnlZDg",
 	"mainPrefix": ".",
 	"mongodb": "mongodb+srv://admin:4Z12t2TYyBQGdPmT@hentai.klm1z.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
 	"mainOwner": "849641637831376936"
