--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@distube/soundcloud": "^1.0.0",
     "@distube/spotify": "^1.0.0",
+    "@distube/yt-dlp": "^1.0.2",
     "@distube/ytdl-core": "^4.11.3",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
@@ -66,10 +67,10 @@
     "nextjs-progressbar": "^0.0.13",
     "node-canvas-with-twemoji-and-discord-emoji": "^1.2.1",
     "node-kitsu": "^1.1.1",
-    "node-opus": "^0.3.3",
     "node-url-shortener": "^2.0.0",
     "node-vibrant": "^3.2.1-alpha.1",
     "nodemon": "^2.0.15",
+    "opusscript": "^0.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactstrap": "^9.0.1",
